--- a/citas.html
+++ b/citas.html
@@ -318,6 +318,13 @@
                     </a>
                     <A name="fila_5" HREF="#" id="agregar-favoritos_5"></A>
                 </li>
+                <li id="fila_18">
+                    <a target="_parent" href="ayuntamiento_comunidades.html"><img width="60px " src="css/images/sele_electronica.png">
+                        <h6>Todos los ayuntamientos de España</h6>
+                        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188); ">Busque aquí la sede electronica del ayuntamiento de su localidad.</p>
+                    </a>
+                    <A name="fila_5 " HREF="# " id="agregar-favoritos_5 "></A>
+                </li>
             </ul>
         </div>
     </div>
@@ -353,17 +360,17 @@
     </style>
 
 
-    <iframe id="panorama" name="fila_panorama">
+    <iframe id="panorama " name="fila_panorama ">
 
   </iframe>
     <script>
         $(document).ready(function() {
 
-            $("body").on("focus", "input", function(event) {
+            $("body ").on("focus ", "input ", function(event) {
                 $(this).attr('autocomplete', 'on')
             });
 
-            var favoritos = localStorage.getItem("favoritos") || "[]";
+            var favoritos = localStorage.getItem("favoritos ") || "[] ";
             favoritos = JSON.parse(favoritos);
 
             for (var j = 0; j < favoritos.length; j++) {
@@ -371,12 +378,12 @@
                 var posGeneral = favoritos[j].id;
                 var nomb = favoritos[j].nombre;
 
-                $("#" + posGeneral).show();
-                $("#" + "agregar-favoritos_" + posGeneral).attr("class", "ui-btn ui-btn-icon-notext ui-icon-star ui-btn-a");
+                $("# " + posGeneral).show();
+                $("# " + "agregar-favoritos_ " + posGeneral).attr("class ", "ui-btn ui-btn-icon-notext ui-icon-star ui-btn-a ");
             }
 
 
-            $("a[id^='agregar-favoritos']").click(
+            $("a[id^='agregar-favoritos' ] ").click(
                 function(e) {
 
                     // hacemos que no se ejecute el enlace
@@ -385,16 +392,16 @@
                     // leemos los datos clave del producto y los guardamos en un objeto
 
 
-                    var identi = $(this).attr("id");
-                    identi = identi.substring(identi.indexOf("_") + 1);
+                    var identi = $(this).attr("id ");
+                    identi = identi.substring(identi.indexOf("_ ") + 1);
 
                     var datos = {
                         id: identi,
-                        nombre: $("#" + identi).attr('visible')
+                        nombre: $("# " + identi).attr('visible')
                     };
 
                     // leemos los favoritos del localStorage
-                    var favoritos = localStorage.getItem("favoritos") || "[]";
+                    var favoritos = localStorage.getItem("favoritos ") || "[] ";
                     favoritos = JSON.parse(favoritos);
 
                     // buscamos el producto en la lista de favoritos
@@ -405,24 +412,24 @@
                     if (posLista > -1) {
 
                         // si está, lo quitamos
-                        alertify.error("eliminado de favoritos");
-                        $("#fila_" + identi).hide();
+                        alertify.error("eliminado de favoritos ");
+                        $("#fila_ " + identi).hide();
 
                         favoritos.splice(posLista, 1);
 
                     } else {
                         // si no está, lo añadimos
-                        $("#agregar-favoritos_" + identi).attr("class", "ui-btn ui-btn-icon-notext ui-icon-star ui-btn-a");
-                        alertify.success("añadido favoritos");
+                        $("#agregar-favoritos_ " + identi).attr("class ", "ui-btn ui-btn-icon-notext ui-icon-star ui-btn-a ");
+                        alertify.success("añadido favoritos ");
 
-                        // $("#" + identi).show();
+                        // $("# " + identi).show();
 
 
                         favoritos.push(datos);
                     }
 
                     // guardamos la lista de favoritos 
-                    localStorage.setItem("favoritos", JSON.stringify(favoritos));
+                    localStorage.setItem("favoritos ", JSON.stringify(favoritos));
 
                 }
 
@@ -433,24 +440,24 @@
         });
 
         $('#favorito').click(function(e) {
-            var filtvalue = "show";
-            var favoritos = localStorage.getItem("favoritos") || "[]";
+            var filtvalue = "show ";
+            var favoritos = localStorage.getItem("favoritos ") || "[] ";
             favoritos = JSON.parse(favoritos);
 
-            $("li[id^='fila_']").hide();
+            $("li[id^='fila_' ] ").hide();
 
             for (var j = 0; j < favoritos.length; j++) {
-                $("#fila_" + favoritos[j].id).show();
-                $("#agregar-favoritos_" + favoritos[j].id).attr("class", "ui-btn ui-btn-icon-notext ui-icon-star ui-btn-a");
+                $("#fila_ " + favoritos[j].id).show();
+                $("#agregar-favoritos_ " + favoritos[j].id).attr("class ", "ui-btn ui-btn-icon-notext ui-icon-star ui-btn-a ");
             }
 
-            $("li[id^='contenedor_']").each(function() {
+            $("li[id^='contenedor_' ] ").each(function() {
                 var numerofavoritos = 0;
 
 
-                $(this).find("li").each(function() {
-                    var iden = $(this).attr("id");
-                    iden = iden.substring(iden.indexOf("_") + 1);
+                $(this).find("li ").each(function() {
+                    var iden = $(this).attr("id ");
+                    iden = iden.substring(iden.indexOf("_ ") + 1);
                     var encontrado = false;
                     for (var i = 0; i < favoritos.length && !encontrado; i++) {
                         encontrado = favoritos[i].id == iden;
@@ -470,14 +477,14 @@
 
         });
         $('#todos').click(function(e) {
-            var filtvalue = "hide";
+            var filtvalue = "hide ";
 
 
-            $("#theList").find("li").each(function(idx) {
+            $("#theList ").find("li ").each(function(idx) {
                 //get filter text
-                var filtText = $(this).attr("visible");
+                var filtText = $(this).attr("visible ");
 
-                if (filtText != undefined && filtText == "hide") {
+                if (filtText != undefined && filtText == "hide ") {
 
                     $(this).hide();
                 } else {
@@ -487,7 +494,7 @@
         });
 
 
-        // cuando se pulsa en "agregar a favoritos"
+        // cuando se pulsa en "agregar a favoritos "
     </script>
 
 </body>
