--- a/citas.html
+++ b/citas.html
@@ -96,6 +96,139 @@
                     <A name="fila_4" HREF="#" id="agregar-favoritos_4"></A>
                 </li>
 
+
+                <li id="contenedor_20" data-role="collapsible">
+                    <h6>Trámites online acceso SMS</h6>
+                    <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Trámites online SMS (Solo necesita un DNI/NE y un número de teléfono</p>
+                    <div data-mini="true">
+
+                        <ul id="theList2" data-role="listview" data-filter="true" data-input="#myFilter" data-inset="true" data-split-icon="star" data-theme="a" data-split-theme="b" data-inset="true">
+                            <li id="fila_201">
+                                <a target="_parent" href="https://w7.seg-social.es/AutenticacionSMSWeb/Identificacion?URI=https%3A%2F%2Fw7.seg-social.es%2FProsaInternet%2FOnlineAccess%3FARQ.SPM.ACTION%3DLOGIN%26ARQ.SPM.APPTYPE%3DSERVICE%26ARQ.IDAPP%3DAFHGL008"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                                    <h6>Alta RETA </h6>
+                                    <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Alta de trabajador en el régimen especial de trabajadores autónomos (RETA)</p>
+                                </a>
+                                <A name="fila_201" HREF="#" id="agregar-favoritos_201"></A>
+                            </li>
+
+                </li>
+                <li id="fila_202">
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AFHGL001"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                        <h6>Baja RETA </h6>
+                        <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Baja de trabajador en el régimen especial de trabajadores autónomos (RETA)</p>
+                    </a>
+                    <A name="fila_202" HREF="#" id="agregar-favoritos_202"></A>
+                </li>
+                <li id="fila_203">
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AFHGL002"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                        <h6>Alta Empleados del Hogar </h6>
+                        <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Alta en Sistema Especial para Empleados de Hogar</p>
+                    </a>
+                    <A name="fila_203" HREF="#" id="agregar-favoritos_203"></A>
+                </li>
+                <li id="fila_204">
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AFHGL002"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                        <h6>Baja Empleados del Hogar </h6>
+                        <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">baja en Sistema Especial para Empleados de Hogar</p>
+                    </a>
+                    <A name="fila_204" HREF="#" id="agregar-favoritos_204"></A>
+                </li>
+                <li id="fila_205">
+                    <a target="_parent" href="https://sp.seg-social.es/AutenticacionSMSWeb/Identificacion?URI=https%3A%2F%2Fsp.seg-social.es%2FIPDC%2FPostLogin%3FidSesion%3DSPACd52cf391-9b76-4321-9256-e2688dcbb13e"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                        <h6>Cambio de base de cotización Autónomos</h6>
+                        <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Cambio de base de cotización en el régimen especial de trabajadores autónomos</p>
+                    </a>
+                    <A name="fila_205" HREF="#" id="agregar-favoritos_205"></A>
+                </li>
+                <li id="fila_206">
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=SEDA0005"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                        <h6>Cambio de base de cotización-convenios especiales </h6>
+                        <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Cambio de base de cotización-convenios especiales</p>
+                    </a>
+                    <A name="fila_205" HREF="#" id="agregar-favoritos_206"></A>
+                </li>
+                <li id="fila_207">
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=SEDA0002"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                        <h6>Cambio de domicilio Seguridad Social </h6>
+                        <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Cambio de domicilio</p>
+                    </a>
+                    <A name="fila_207" HREF="#" id="agregar-favoritos_207"></A>
+                </li>
+                <li id="fila_208">
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=XV204300"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                        <h6>Comunicación de teléfono y correo electrónico </h6>
+                        <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Comunicación de teléfono y correo electrónico</p>
+                    </a>
+                    <A name="fila_208" HREF="#" id="agregar-favoritos_208"></A>
+                </li>
+                <li id="fila_209">
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=INAF0003&IFCA.CODIGO_INFORME=INAFInfCampVidaLabo&IFCA.TIPO_DOCUMENTO=IMPRIMIBLE"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                        <h6>Vida laboral y Bases de cotización </h6>
+                        <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Vida laboral y Bases de cotización</p>
+                    </a>
+                    <A name="fila_209" HREF="#" id="agregar-favoritos_209"></A>
+                </li>
+                <li id="fila_210">
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=RETC0003"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                        <h6>Confirmación de asignación de CCCs o NAFs a un autorizado RED</h6>
+                        <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Confirmación de asignación de CCCs o NAFs a un autorizado RED
+                        </p>
+                    </a>
+                    <A name="fila_210" HREF="#" id="agregar-favoritos_210"></A>
+                </li>
+
+
+
+                </ul>
+                </div>
+                </li>
+
+
+                <!--
+9. 
+10. Confirmación de asignación de CCCs o NAFs a un autorizado RED
+11. Consulta de autorizados RED que gestionan un NAF
+12. Consulta de autorizados RED que gestionan una empresa
+13. Consulta de cálculos de cuotas para trabajador
+14. Consulta del número de Seguridad Social NUSS
+15. Consulta de recibos emitidos para el Régimen Especial de Trabajadores Autónomos (RETA)
+16. Domiciliación en cuenta
+17. Duplicado de documentos de inscripción y asignación de CCC para empresario
+18. Eliminación de altas/ bajas previas de trabajadores en el Sistema Especial para Empleados de Hogar
+19. Inclusión/exclusión/reincorporación en Sistema Especial Agrario. Inactividad
+20. Informe Acreditación actividad agraria cuenta propia
+21. Informe de alta laboral a fecha concreta
+22. Informe de bases de cotización
+23. Informe de bases y cuotas ingresadas
+24. Informe de datos de cotización RETA
+25. Informe de datos de cotización RETM
+26. Informe de datos identificativos y de domicilio
+27. Informe de estar al corriente en las obligaciones de la Seguridad Social
+28. Informe de situación actual del trabajador
+29. Informe de situación de empresario individual
+30. Informe de vida laboral
+31. Informe de vida laboral acotado
+32. Informe integrado de prestaciones
+Listado de servicios con acceso vía SMS 2 de 2 18 de junio de 2020
+33. Informe negativo de afiliación
+34. Informe negativo de inscripción de empresario
+35. Justificante de jornadas reales trabajadas
+36. Modificación de Actividad RETA
+37. Modificación de la Condición RETA
+38. Rectificación de informe de bases de cotización
+39. Rectificación de informe de vida laboral
+40. Rescisión de CCCs y NAFs asignados a un autorizado RED
+41. Resolución (duplicado) de alta/baja en el Régimen Especial de trabajadores por cuenta propia o
+autónomos
+42. Resolución (duplicado) de alta/baja en el Régimen Especial del Mar por cuenta propia
+43. Resolución (duplicado) de alta/baja en el Sistema Especial para Empleados de Hogar
+44. Solicitud de base reducida por pluriactividad RETA
+45. Solicitud de base reducida por pluriactividad RETM
+46. Solicitud de modificación para el año próximo de Mutua colaboradora y de la cobertura de
+contingencias RETA.
+47. Solicitud Tarjeta Sanitaria Europea (TSE)
+48. Variaciones/ Correcciones de datos de trabajadores en el Sistema Especial para Empleados de Hogar
+-->
                 <li id="fila_5">
                     <a target="_parent" href="https://www.tumejoritv.com/oferta-cita-itv"><img width="60px" src="css/images/logo_itv.png">
                         <h6>Cita previa ITV (Todos los Centros de España)</h6>
@@ -115,14 +248,6 @@
                 </li>
 
 
-                <li id="fila_7">
-                    <a target="_parent" href="https://www.citaprevia.sanidadmadrid.org/Forms/Acceso.aspx"><img width="60px" src="css/images/logo_salud.png">
-                        <h6>Cita previa Sanidad Madrid</h6>
-                        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Para solicitar citas con el Médico, Enfermera, vacunación, Pediatra</p>
-                    </a>
-                    <A name="fila_7" HREF="#" id="agregar-favoritos_7"></A>
-                </li>
-
                 <li id="fila_8">
                     <a target="_parent" href="https://sedeclave.dgt.gob.es/WEB_NCIT_CONSULTA/solicitarCita.faces"><img width="60px" src="css/images/logo_dgt.jpg">
                         <h6>Cita previa Dirección General de Tráfico</h6>
@@ -132,13 +257,7 @@
                 </li>
 
 
-                <li id="fila_9">
-                    <a target="_parent" href="https://www-s.munimadrid.es/CitaNet/index.jsp"><img width="60px" src="css/images/logo_munimadrid.png">
-                        <h6>Cita previa Ayuntamiento de Madrid</h6>
-                        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Pago de impuestos, tasas , información, etc..</p>
-                    </a>
-                    <A name="fila_9" HREF="#" id="agregar-favoritos_9"></A>
-                </li>
+
 
 
                 <li id="contenedor_10" data-role="collapsible">
@@ -318,6 +437,13 @@
                     </a>
                     <A name="fila_18" HREF="#" id="agregar-favoritos_18"></A>
                 </li>
+                <li id="fila_9">
+                    <a target="_parent" href="https://www-s.munimadrid.es/CitaNet/index.jsp"><img width="60px" src="css/images/logo_munimadrid.png">
+                        <h6>Cita previa Ayuntamiento de Madrid</h6>
+                        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Pago de impuestos, tasas , información, etc..</p>
+                    </a>
+                    <A name="fila_9" HREF="#" id="agregar-favoritos_9"></A>
+                </li>
                 <li id="fila_19">
                     <a target="_parent" href="ayuntamiento_comunidades.html"><img width="60px " src="css/images/sele_electronica.png">
                         <h6>Todos los ayuntamientos de España</h6>
@@ -492,11 +618,10 @@
                 }
             });
         });
-
-
-        // cuando se pulsa en "agregar a favoritos "
     </script>
 
 </body>
+
+</html>
 
 </html>
