--- a/citas.html
+++ b/citas.html
@@ -177,18 +177,39 @@
                     <A name="fila_210" HREF="#" id="agregar-favoritos_210"></A>
                 </li>
 
+                <li id="fila_211">
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=RETC0002"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                        <h6>Consulta de autorizados RED que gestionan un NAF</h6>
+                        <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Consulta de autorizados RED que gestionan un NAF
+                        </p>
+                    </a>
+                    <A name="fila_211" HREF="#" id="agregar-favoritos_211"></A>
+                </li>
 
-
+                <li id="fila_212">
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=RETC0001"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                        <h6>Consulta de autorizados RED que gestionan una empresa</h6>
+                        <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Consulta de autorizados RED que gestionan una empresa
+                        </p>
+                    </a>
+                    <A name="fila_212" HREF="#" id="agregar-favoritos_212"></A>
+                </li>
+                <li id="fila_213">
+                    <a target="_parent" href="https://sp.seg-social.es/AutenticacionSMSWeb/Identificacion?URI=https%3A%2F%2Fsp.seg-social.es%2FIPDC%2FPostLogin%3FidSesion%3DSPAC2f37b780-9531-4269-ae5d-394c70806f29"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                        <h6>Consulta de cálculos de cuotas para trabajador</h6>
+                        <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Consulta de cálculos de cuotas para trabajador
+                        </p>
+                    </a>
+                    <A name="fila_213" HREF="#" id="agregar-favoritos_213"></A>
+                </li>
                 </ul>
                 </div>
                 </li>
 
 
                 <!--
-9. 
-10. Confirmación de asignación de CCCs o NAFs a un autorizado RED
-11. Consulta de autorizados RED que gestionan un NAF
-12. Consulta de autorizados RED que gestionan una empresa
+
+
 13. Consulta de cálculos de cuotas para trabajador
 14. Consulta del número de Seguridad Social NUSS
 15. Consulta de recibos emitidos para el Régimen Especial de Trabajadores Autónomos (RETA)
