--- a/citas.html
+++ b/citas.html
@@ -98,13 +98,14 @@
 
 
                 <li id="contenedor_20" data-role="collapsible">
-                    <h6>Trámites online acceso SMS</h6>
+                    <h6><img width="60px" width="60px" src="css/images/logo_ss.png">Trámites online acceso SMS</h6>
+
                     <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Trámites online SMS (Solo necesita un DNI/NE y un número de teléfono</p>
                     <div data-mini="true">
 
                         <ul id="theList2" data-role="listview" data-filter="true" data-input="#myFilter" data-inset="true" data-split-icon="star" data-theme="a" data-split-theme="b" data-inset="true">
                             <li id="fila_201">
-                                <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AFHGL008&PAUC.FORCE_IDP=IPDC"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                                <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AFHGL008&PAUC.FORCE_IDP=IPDC">
                                     <h6>Alta RETA </h6>
                                     <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Alta de trabajador en el régimen especial de trabajadores autónomos (RETA)</p>
                                 </a>
@@ -113,63 +114,63 @@
 
                 </li>
                 <li id="fila_202">
-                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AFHGL001"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AFHGL001">
                         <h6>Baja RETA </h6>
                         <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Baja de trabajador en el régimen especial de trabajadores autónomos (RETA)</p>
                     </a>
                     <A name="fila_202" HREF="#" id="agregar-favoritos_202"></A>
                 </li>
                 <li id="fila_203">
-                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AFHGL002"><img width="60px" width="60px" src="css/images/logo_ss.png">
-                        <h6>Alta Empleados del Hogar </h6>
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AFHGL002">
+                        <h6>Alta Empleados Hogar </h6>
                         <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Alta en Sistema Especial para Empleados de Hogar</p>
                     </a>
                     <A name="fila_203" HREF="#" id="agregar-favoritos_203"></A>
                 </li>
                 <li id="fila_204">
-                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AFHGL002"><img width="60px" width="60px" src="css/images/logo_ss.png">
-                        <h6>Baja Empleados del Hogar </h6>
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AFHGL002">
+                        <h6>Baja Empleados Hogar </h6>
                         <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">baja en Sistema Especial para Empleados de Hogar</p>
                     </a>
                     <A name="fila_204" HREF="#" id="agregar-favoritos_204"></A>
                 </li>
                 <li id="fila_205">
-                    <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AFHGL00A&PAUC.FORCE_IDP=IPDC"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                    <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AFHGL00A&PAUC.FORCE_IDP=IPDC">
                         <h6>Cambio de base de cotización Autónomos</h6>
                         <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Cambio de base de cotización en el régimen especial de trabajadores autónomos</p>
                     </a>
                     <A name="fila_205" HREF="#" id="agregar-favoritos_205"></A>
                 </li>
                 <li id="fila_206">
-                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=SEDA0005"><img width="60px" width="60px" src="css/images/logo_ss.png">
-                        <h6>Cambio de base de cotización-convenios especiales </h6>
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=SEDA0005">
+                        <h6>Cambio de base de cotización- </h6>
                         <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Cambio de base de cotización-convenios especiales</p>
                     </a>
                     <A name="fila_205" HREF="#" id="agregar-favoritos_206"></A>
                 </li>
                 <li id="fila_207">
-                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=SEDA0002"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=SEDA0002">
                         <h6>Cambio de domicilio Seguridad Social </h6>
                         <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Cambio de domicilio</p>
                     </a>
                     <A name="fila_207" HREF="#" id="agregar-favoritos_207"></A>
                 </li>
                 <li id="fila_208">
-                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=XV204300"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=XV204300">
                         <h6>Comunicación de teléfono y correo electrónico </h6>
                         <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Comunicación de teléfono y correo electrónico</p>
                     </a>
                     <A name="fila_208" HREF="#" id="agregar-favoritos_208"></A>
                 </li>
                 <li id="fila_209">
-                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=INAF0003&IFCA.CODIGO_INFORME=INAFInfCampVidaLabo&IFCA.TIPO_DOCUMENTO=IMPRIMIBLE"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=INAF0003&IFCA.CODIGO_INFORME=INAFInfCampVidaLabo&IFCA.TIPO_DOCUMENTO=IMPRIMIBLE">
                         <h6>Vida laboral y Bases de cotización </h6>
                         <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Vida laboral y Bases de cotización</p>
                     </a>
                     <A name="fila_209" HREF="#" id="agregar-favoritos_209"></A>
                 </li>
                 <li id="fila_210">
-                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=RETC0003"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=RETC0003">
                         <h6>Confirmación de asignación de CCCs o NAFs a un autorizado RED</h6>
                         <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Confirmación de asignación de CCCs o NAFs a un autorizado RED
                         </p>
@@ -178,7 +179,7 @@
                 </li>
 
                 <li id="fila_211">
-                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=RETC0002"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=RETC0002">
                         <h6>Consulta de autorizados RED que gestionan un NAF</h6>
                         <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Consulta de autorizados RED que gestionan un NAF
                         </p>
@@ -187,7 +188,7 @@
                 </li>
 
                 <li id="fila_212">
-                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=RETC0001"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                    <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=RETC0001">
                         <h6>Consulta de autorizados RED que gestionan una empresa</h6>
                         <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Consulta de autorizados RED que gestionan una empresa
                         </p>
@@ -195,7 +196,7 @@
                     <A name="fila_212" HREF="#" id="agregar-favoritos_212"></A>
                 </li>
                 <li id="fila_213">
-                    <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=XV21YD00&PAUC.FORCE_IDP=IPDC"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                    <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=XV21YD00&PAUC.FORCE_IDP=IPDC">
                         <h6>Consulta de cálculos de cuotas para trabajador</h6>
                         <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Consulta de cálculos de cuotas para trabajador
                         </p>
@@ -205,7 +206,7 @@
 
 
                 <li id="fila_214">
-                    <a target="_parent" href="https://sp.seg-social.es/AutenticacionSMSWeb/Identificacion?URI=https%3A%2F%2Fsp.seg-social.es%2FIPDC%2FPostLogin%3FidSesion%3DSPACcd6e317b-6bf2-4056-912e-69d69ac35a83"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                    <a target="_parent" href="https://sp.seg-social.es/AutenticacionSMSWeb/Identificacion?URI=https%3A%2F%2Fsp.seg-social.es%2FIPDC%2FPostLogin%3FidSesion%3DSPACcd6e317b-6bf2-4056-912e-69d69ac35a83">
                         <h6>Consulta del número de Seguridad Social NUSS</h6>
                         <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Consulta del número de Seguridad Social NUSS
                         </p>
