--- a/citas.html
+++ b/citas.html
@@ -206,7 +206,7 @@
 
 
                 <li id="fila_214">
-                    <a target="_parent" href="https://sp.seg-social.es/AutenticacionSMSWeb/Identificacion?URI=https%3A%2F%2Fsp.seg-social.es%2FIPDC%2FPostLogin%3FidSesion%3DSPACcd6e317b-6bf2-4056-912e-69d69ac35a83"><img width="60px" width="60px" src="css/images/logo_ss.png">
+                    <a target="_parent" href="https://sp.seg-social.es/AutenticacionSMSWeb/Identificacion?URI=https%3A%2F%2Fsp.seg-social.es%2FIPDC%2FPostLogin%3FidSesion%3DSPACcd6e317b-6bf2-4056-912e-69d69ac35a83">
                         <h6>Consulta del número de Seguridad Social NUSS</h6>
                         <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Consulta del número de Seguridad Social NUSS
                         </p>
@@ -520,7 +520,7 @@ contingencias RETA.
     </style>
 
 
-    <iframe id="_parent" name="_parent" frameborder="0">
+    <iframe id="_parent" name="_parent" frameborder="0" src="">
 
   </iframe>
     <script>
