--- a/citas.html
+++ b/citas.html
@@ -41,7 +41,7 @@
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/jquery.mobile-1.4.5.min.js"></script>
     <title>Cita Previa Única</title>
-
+    <base target="_parent">
 </head>
 
 <body>
